--- a/profile.html
+++ b/profile.html
@@ -64,7 +64,7 @@
 
             <!-- Save Button -->
             <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-full shadow-sm text-lg font-bold text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all duration-300 ease-in-out">
-                Save & View Profile
+                Save & View Profile....
             </button>
         </form>
     </div>
