--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
                         <textarea id="gigDescription" rows="2" class="mt-1 block w-full px-4 py-2 rounded-xl border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., A complete website design for your portfolio or club."></textarea>
                     </div>
                     <button type="button" id="addGigBtn" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-full shadow-sm text-sm font-semibold text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-400 transition-all duration-300">
-                        + Add Another Gig
+                        + Add Another Gig...
                     </button>
                 </div>
                 
