linked login with register page

--- a/login1.html
+++ b/login1.html
@@ -117,7 +117,8 @@
         <!-- Create Account Link -->
         <div class="mt-8 text-center text-sm text-gray-500">
             New to Campus Gig? 
-            <a href="#" class="font-bold text-blue-700 hover:text-blue-900 transition-colors duration-200">
+            <a href="register.html" class="font-bold text-blue-700 hover:text-blue-900 transition-colors duration-200">
+
                 Create an account
             </a>
         </div>
