--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
                     gigCard.innerHTML = `
                         <div>
                             <h3 class="font-semibold text-gray-800">${gig.title}</h3>
-                            <p class="text-sm text-gray-500">$${gig.price}</p>
+                            <p class="text-sm text-gray-500">₹${gig.price}</p>
                         </div>
                         <button type="button" class="remove-gig-btn text-red-500 hover:text-red-700 transition" data-index="${index}">
                             Remove
