--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
                         <input type="text" id="gigTitle" class="mt-1 block w-full px-4 py-2 rounded-xl border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., I will design a modern website">
                     </div>
                     <div>
-                        <label for="gigPrice" class="block text-sm font-medium text-gray-700">Starting Price ($)</label>
+                        <label for="gigPrice" class="block text-sm font-medium text-gray-700">Starting Price (₹)</label>
                         <input type="number" id="gigPrice" class="mt-1 block w-full px-4 py-2 rounded-xl border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., 50">
                     </div>
                     <div>
