--- a/register.html
+++ b/register.html
@@ -19,9 +19,9 @@
 </head>
 <body class="flex items-center justify-center min-h-screen p-4 bg-gray-100">
 
-    <!-- Registration Form Container with background logo -->
+    <!-- Registration Form Container with background image -->
     <div class="rounded-3xl shadow-xl max-w-lg w-full relative overflow-hidden" 
-         style="background-image: url('logo.png'); background-size: cover; background-position: center;">
+         style="background-image: url('Gemini_Generated_Image_cskovvcskovvcsko.png'); background-size: cover; background-position: center;">
 
         <!-- Overlay for readability -->
         <div class="overlay p-8 md:p-12">
