--- a/profile.html
+++ b/profile.html
@@ -67,6 +67,10 @@
                 Save & View Profile....
             </button>
         </form>
+        <p class="mt-4 text-center">
+  <a href="home.html" class="text-blue-600 hover:underline">⬅ Back to Dashboard</a>
+</p>
+
     </div>
 
     <script>
