--- a/post.html
+++ b/post.html
@@ -3,45 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post a Job - CampusGig</title>
+  <title>Post Job</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
-  <div class="bg-white p-8 rounded-2xl shadow-2xl max-w-xl w-full">
-    <h1 class="text-3xl font-extrabold text-blue-800 text-center mb-6">Post a Job</h1>
-    
-    <form class="space-y-5">
-      <div>
-        <label class="block text-sm font-semibold">Job Title</label>
-        <input type="text" class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="e.g., Event Helper">
-      </div>
-      <div>
-        <label class="block text-sm font-semibold">Category</label>
-        <select class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
-          <option>Design</option>
-          <option>Tutoring</option>
-          <option>Event Help</option>
-          <option>Technical</option>
-        </select>
-      </div>
-      <div>
-        <label class="block text-sm font-semibold">Description</label>
-        <textarea class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500" rows="3"></textarea>
-      </div>
-      <div>
-        <label class="block text-sm font-semibold">Payment (₹)</label>
-        <input type="number" class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
-      </div>
-      <div>
-        <label class="block text-sm font-semibold">Deadline</label>
-        <input type="date" class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
-      </div>
-
-      <button type="submit" class="w-full py-3 bg-blue-700 text-white font-bold rounded-full hover:bg-blue-800">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-6">
+  <div class="bg-white p-8 rounded-xl shadow-xl w-full max-w-lg">
+    <h1 class="text-2xl font-bold text-blue-800 mb-6">Post a New Gig</h1>
+    <form>
+      <input type="text" placeholder="Job Title" required class="w-full mb-4 px-4 py-2 border rounded-lg">
+      <textarea placeholder="Job Description" required class="w-full mb-4 px-4 py-2 border rounded-lg"></textarea>
+      <input type="number" placeholder="Payment (₹)" required class="w-full mb-4 px-4 py-2 border rounded-lg">
+      <button type="submit" class="w-full py-3 bg-blue-700 text-white font-bold rounded-lg hover:bg-blue-800">
         Post Job
       </button>
     </form>
+    <p class="mt-4 text-center"><a href="home.html" class="text-blue-600 hover:underline">⬅ Back to Dashboard</a></p>
   </div>
 </body>
 </html>
-
