--- a/register.html
+++ b/register.html
@@ -3,67 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post a Job - CampusGig</title>
+  <title>Campus Gig - Register</title>
+
+  <!-- ✅ Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
+    /* Google Font */
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Inter', sans-serif;
+    }
   </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+<body class="min-h-screen flex items-center justify-center p-6 bg-gradient-to-r from-blue-50 to-blue-100">
 
-<<<<<<< HEAD
-  <div class="bg-white p-10 rounded-3xl shadow-2xl max-w-2xl w-full">
+  <!-- Register Card -->
+  <div class="w-full max-w-md bg-white p-8 rounded-2xl shadow-xl">
+
     <!-- Title -->
-    <h1 class="text-4xl font-extrabold text-blue-800 text-center mb-8">Post a New Job</h1>
-=======
-    <!-- Registration Form Container with background image -->
-    <div class="rounded-3xl shadow-xl max-w-lg w-full relative overflow-hidden" 
-         style="background-image: url('Gemini_Generated_Image_cskovvcskovvcsko.png'); background-size: cover; background-position: center;">
->>>>>>> 251fee66e1aad7968106dea4ba4cde6d90e4d833
+    <div class="text-center mb-6">
+      <h2 class="text-4xl font-extrabold text-blue-800">Create Account</h2>
+      <p class="mt-2 text-gray-600">Join Campus Gig today</p>
+    </div>
 
-    <form class="space-y-6">
-      <!-- Job Title -->
+    <!-- Register Form -->
+    <form onsubmit="return doRegister(event)" class="space-y-5">
+      
+      <!-- Username -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Job Title</label>
-        <input type="text" placeholder="e.g., Event Helper" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
+        <label for="regUsername" class="block text-sm font-semibold text-gray-700 mb-1">Username</label>
+        <input type="text" id="regUsername" required 
+          class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm 
+                 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" 
+          placeholder="Enter a username">
       </div>
 
-      <!-- Category -->
+      <!-- Email -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Category</label>
-        <select class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
-          <option>🎨 Design</option>
-          <option>📚 Tutoring</option>
-          <option>🎉 Event Help</option>
-          <option>💻 Technical</option>
-        </select>
+        <label for="regEmail" class="block text-sm font-semibold text-gray-700 mb-1">Email</label>
+        <input type="email" id="regEmail" required 
+          class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm 
+                 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" 
+          placeholder="you@example.com">
       </div>
 
-      <!-- Description -->
+      <!-- Password -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Description</label>
-        <textarea rows="4" placeholder="Describe the job in detail..." class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"></textarea>
+        <label for="regPassword" class="block text-sm font-semibold text-gray-700 mb-1">Password</label>
+        <input type="password" id="regPassword" required 
+          class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm 
+                 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" 
+          placeholder="Enter a strong password">
       </div>
 
-      <!-- Payment -->
-      <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Payment (₹)</label>
-        <input type="number" placeholder="e.g., 500" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
-      </div>
-
-      <!-- Deadline -->
-      <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Deadline</label>
-        <input type="date" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
-      </div>
-
-      <!-- Button -->
-      <button type="submit" class="w-full py-3 mt-4 bg-blue-700 text-white font-bold rounded-full shadow-lg hover:bg-blue-800 transform hover:scale-105 transition duration-300">
-        🚀 Post Job
+      <!-- Register Button -->
+      <button type="submit" 
+        class="w-full py-3 bg-blue-700 text-white font-bold rounded-full shadow-lg 
+               hover:bg-blue-800 transform hover:scale-105 transition-all duration-300">
+        Create Account
       </button>
     </form>
+
+    <!-- Already Have Account -->
+    <div class="mt-6 text-center text-sm text-gray-500">
+      Already have an account? 
+      <a href="login.html" class="font-bold text-blue-700 hover:text-blue-900">Log in</a>
+    </div>
   </div>
 
+  <script>
+    function doRegister(event) {
+      event.preventDefault();
+      alert("✅ Account created! Please log in.");
+      window.location.href = "login.html"; // Redirect back to login
+    }
+  </script>
 </body>
 </html>
