--- a/home.html
+++ b/home.html
@@ -13,32 +13,23 @@
 <body class="bg-gray-50 min-h-screen flex flex-col">
 
   <!-- Header -->
-  <header class="bg-blue-800 text-white py-5 shadow-lg">
+  <header class="bg-blue-800 text-white py-6 shadow-lg">
     <div class="container mx-auto px-6 flex justify-between items-center">
-      <h1 class="text-3xl font-bold">CampusGig Dashboard</h1>
-      <a href="logout.html" class="text-sm bg-red-500 px-4 py-2 rounded-full hover:bg-red-600 transition">Logout</a>
+      <h1 class="text-4xl font-extrabold tracking-wide">CampusGig Dashboard</h1>
+      <a href="logout.html" class="text-sm bg-red-500 px-5 py-2 rounded-full hover:bg-red-600 transition font-semibold">Logout</a>
     </div>
   </header>
 
-  <!-- Navigation Bar -->
-  <nav class="bg-blue-700 text-white py-3">
-    <div class="container mx-auto px-6 flex justify-center space-x-6">
-      <a href="postJob.html" class="hover:underline">Post Job</a>
-      <a href="jobBoard.html" class="hover:underline">Browse Jobs</a>
-      <a href="search.html" class="hover:underline">Search</a>
-      <a href="profile.html" class="hover:underline">Profile</a>
-      <a href="applicationTracker.html" class="hover:underline">Applications</a>
-    </div>
-  </nav>
-
   <!-- Main Content -->
-  <main class="flex-grow container mx-auto px-6 py-12">
-    <div class="bg-white rounded-2xl shadow-md p-10">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">🎓 Welcome to CampusGig</h2>
-      <p class="text-gray-600 mb-10 text-lg">Your one-stop hub for freelance and part-time campus opportunities. Choose an option below to get started.</p>
+  <main class="flex-grow container mx-auto px-6 py-16">
+    <div class="bg-white rounded-2xl shadow-md p-12">
+      <h2 class="text-4xl font-bold text-gray-900 mb-6 text-center">🎓 Welcome to CampusGig</h2>
+      <p class="text-gray-600 mb-12 text-lg text-center max-w-2xl mx-auto">
+        Your one-stop hub for freelance and part-time campus opportunities. Choose an option below to get started.
+      </p>
 
       <!-- Dashboard Cards Grid -->
-      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-10">
 
         <!-- Post a Job -->
         <a href="post.html" class="p-8 bg-blue-50 rounded-2xl shadow hover:shadow-xl transition flex flex-col justify-between">
@@ -77,14 +68,6 @@
           <div>
             <h3 class="text-xl font-semibold text-pink-700">📂 Applications</h3>
             <p class="text-gray-600 mt-3">Track your job applications and statuses in one place.</p>
-          </div>
-        </a>
-
-        <!-- Logout -->
-        <a href="logout.html" class="p-8 bg-red-50 rounded-2xl shadow hover:shadow-xl transition flex flex-col justify-between">
-          <div>
-            <h3 class="text-xl font-semibold text-red-700">🚪 Logout</h3>
-            <p class="text-gray-600 mt-3">Log out safely from your account.</p>
           </div>
         </a>
 
