Added dashboard updates

--- a/login1.html
+++ b/login1.html
@@ -85,7 +85,7 @@
                     type="text" 
                     id="username" 
                     name="username" 
-                    placeholder="Enter your username" 
+                    placeholder="Enter your Username" 
                     required
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all"
                 >
