--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
         <label class="block text-sm font-bold text-gray-700 mb-2">Category</label>
         <select class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
           <option>🎨 design</option>
-          <option>📚 Tutoring</option>
+          <option>📚 tutoring</option>
           <option>🎉 Event Help</option>
           <option>💻 Technical</option>
         </select>
