--- a/login1.html
+++ b/login1.html
@@ -31,7 +31,7 @@
             }
         }
 
-        /* Subtle pulse animation for title */
+        /* Subtle lse animation for title */
         @keyframes pulse {
             0%, 100% {
                 transform: scale(1);
