--- a/applicationTracker.html
+++ b/applicationTracker.html
@@ -16,7 +16,7 @@
     </div>
   </header>
 
-  <!-- Applications List -->
+  <!-- Application List -->
   <main class="container mx-auto px-6 py-12 flex-grow">
     <div class="bg-white p-8 rounded-xl shadow-lg">
       <h2 class="text-2xl font-bold text-gray-800 mb-6">Track Your Applications</h2>
