--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
           </div>
         </a>
 
-        <!-- Applications -->
+        <!-- Appications -->
         <a href="applicationTracker.html" class="p-8 bg-pink-50 rounded-2xl shadow hover:shadow-xl transition flex flex-col justify-between">
           <div>
             <h3 class="text-xl font-semibold text-pink-700">📂 Applications</h3>
