--- a/login1.html
+++ b/login1.html
@@ -66,7 +66,7 @@
 </head>
 <body class="min-h-screen flex items-center justify-center p-4" style="background-image: url('ss2.png'); background-size: cover; background-position: center;">
 
-    <!-- Login Containe -->
+    <!- Login Containe -->
     <div class="w-full max-w-sm bg-white rounded-2xl shadow-2xl p-8 transform transition-all duration-300 hover:scale-105 animate-fadeIn">
 
         <!-- Title -->
