--- a/jobBoard.html
+++ b/jobBoard.html
@@ -8,7 +8,6 @@
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col">
 
-  <!-- Header -->
   <header class="bg-blue-800 text-white py-6 shadow-lg">
     <div class="container mx-auto px-6 flex justify-between items-center">
       <h1 class="text-3xl font-bold">💼 Browse Jobs</h1>
@@ -16,11 +15,9 @@
     </div>
   </header>
 
-  <!-- Job Listings -->
   <main class="container mx-auto px-6 py-10 flex-grow">
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
 
-      <!-- Job Card -->
       <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold text-blue-800">Campus Photographer</h3>
         <p class="text-gray-600 mt-2">Looking for a student photographer for an event.</p>
@@ -28,11 +25,24 @@
         <button class="mt-4 w-full bg-blue-700 text-white py-2 rounded-lg hover:bg-blue-800">Apply</button>
       </div>
 
-      <!-- Example Job -->
       <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold text-blue-800">Research Assistant</h3>
         <p class="text-gray-600 mt-2">Assist professor with research documentation.</p>
         <p class="text-gray-800 font-semibold mt-3">₹5000</p>
+        <button class="mt-4 w-full bg-blue-700 text-white py-2 rounded-lg hover:bg-blue-800">Apply</button>
+      </div>
+
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-semibold text-blue-800">Design Gig - Event Posters</h3>
+        <p class="text-gray-600 mt-2">Create promotional posters for the upcoming annual fest.</p>
+        <p class="text-gray-800 font-semibold mt-3">₹3000</p>
+        <button class="mt-4 w-full bg-blue-700 text-white py-2 rounded-lg hover:bg-blue-800">Apply</button>
+      </div>
+
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-semibold text-blue-800">Peer Tutor - Mathematics</h3>
+        <p class="text-gray-600 mt-2">Provide one-on-one tutoring for first-year engineering students.</p>
+        <p class="text-gray-800 font-semibold mt-3">₹800/hour</p>
         <button class="mt-4 w-full bg-blue-700 text-white py-2 rounded-lg hover:bg-blue-800">Apply</button>
       </div>
 
