--- a/register.html
+++ b/register.html
@@ -1,72 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post a Job - CampusGig</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register - Campus Gig</title>
+
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Font -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Inter', sans-serif;
+    }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-6 bg-gradient-to-r from-blue-50 to-blue-100">
+<body class="min-h-screen flex items-center justify-center p-6 bg-gradient-to-r from-blue-100 to-blue-200">
 
-  <!-- Register Card -->
+  <!-- Registration Card -->
   <div class="w-full max-w-md bg-white p-8 rounded-2xl shadow-xl">
-
-<<<<<<< HEAD
-  <div class="bg-white p-10 rounded-3xl shadow-2xl max-w-2xl w-full">
+    
     <!-- Title -->
-    <h1 class="text-4xl font-extrabold text-blue-800 text-center mb-8">Post a New Job</h1>
-=======
-    <!-- Registration Form Container with background image -->
-    <div class="rounded-3xl shadow-xl max-w-lg w-full relative overflow-hidden" 
-         style="background-image: url('Gemini_Generated_Image_cskovvcskovvcsko.png'); background-size: cover; background-position: center;">
->>>>>>> 251fee66e1aad7968106dea4ba4cde6d90e4d833
+    <div class="mb-6 text-center">
+      <h2 class="text-4xl font-extrabold text-blue-800">Create Account</h2>
+      <p class="mt-2 text-slate-500 text-sm">Join Campus Gig and start posting or applying for gigs!</p>
+    </div>
 
-    <form class="space-y-6">
-      <!--Job Title -->
+    <!-- Registration Form -->
+    <form class="space-y-5" action="#" method="post">
+      
+      <!-- Full Name -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Job Title</label>
-        <input type="text" placeholder="e.g., Event Helper" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
+        <label for="name" class="block text-sm font-semibold text-gray-700 mb-1">Full Name</label>
+        <input 
+          type="text" id="name" name="name" required 
+          placeholder="Your full name"
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        />
       </div>
 
-      <!-- Category -->
+      <!-- Email -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Category</label>
-        <select class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
-          <option>🎨 design</option>
-          <option>📚 tutoring</option>
-          <option>🎉 Event Help</option>
-          <option>💻 Technical</option>
-        </select>
+        <label for="email" class="block text-sm font-semibold text-gray-700 mb-1">Email</label>
+        <input 
+          type="email" id="email" name="email" required 
+          placeholder="you@example.com"
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        />
       </div>
 
-      <!-- Description -->
+      <!-- Username -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Description</label>
-        <textarea rows="4" placeholder="Describe the job in detail..." class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"></textarea>
+        <label for="username" class="block text-sm font-semibold text-gray-700 mb-1">Username</label>
+        <input 
+          type="text" id="username" name="username" required 
+          placeholder="Choose a username"
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        />
       </div>
 
-      <!-- Payment -->
+      <!-- Password -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Payment (₹)</label>
-        <input type="number" placeholder="e.g., 500" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
+        <label for="password" class="block text-sm font-semibold text-gray-700 mb-1">Password</label>
+        <input 
+          type="password" id="password" name="password" required 
+          placeholder="Create a password"
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        />
       </div>
 
-      <!-- Deadline -->
+      <!-- Confirm Password -->
       <div>
-        <label class="block text-sm font-bold text-gray-700 mb-2">Deadline</label>
-        <input type="date" class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition">
+        <label for="confirm_password" class="block text-sm font-semibold text-gray-700 mb-1">Confirm Password</label>
+        <input 
+          type="password" id="confirm_password" name="confirm_password" required 
+          placeholder="Confirm your password"
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
+        />
       </div>
 
-      <!-- Button -->
-      <button type="submit" class="w-full py-3 mt-4 bg-blue-700 text-white font-bold rounded-full shadow-lg hover:bg-blue-800 transform hover:scale-105 transition duration-300">
-        🚀 Post Job
+      <!-- Submit Button -->
+      <button 
+        type="submit"
+        class="w-full py-3 bg-blue-700 text-white font-bold rounded-full shadow-lg hover:bg-blue-800 transform hover:scale-105 transition duration-300"
+      >
+        ✅ Register
       </button>
     </form>
-  </div>
 
+    <!-- Already have an account -->
+    <div class="mt-6 text-center text-sm text-gray-600">
+      Already have an account? 
+      <a href="login.html" class="text-blue-700 font-bold hover:text-blue-900 transition">Log in</a>
+    </div>
+  </div>
 </body>
 </html>
