--- a/register.html
+++ b/register.html
@@ -45,7 +45,9 @@
         <label for="email" class="block text-sm font-semibold text-gray-700 mb-1">Email</label>
         <input 
           type="email" id="email" name="email" required 
-          placeholder="you@example.com"
+          placeholder="123456@tkmce.ac.in"
+          pattern="^\d{6}@tkmce\.ac\.in$"
+          title="Email must be in the format 123456@tkmce.ac.in"
           class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
         />
       </div>
@@ -66,6 +68,8 @@
         <input 
           type="password" id="password" name="password" required 
           placeholder="Create a password"
+          pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9]).{7,}$"
+          title="Password must be at least 7 characters long and include one uppercase letter, one number, and one special character."
           class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
         />
       </div>
