--- a/register.html
+++ b/register.html
@@ -36,6 +36,8 @@
         <input 
           type="text" id="name" name="name" required 
           placeholder="Your full name"
+          pattern="^[A-Za-z ]+$"
+          title="Name must contain only letters and spaces"
           class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition"
         />
       </div>
