--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
     <!-- Already have an account -->
     <div class="mt-6 text-center text-sm text-gray-600">
       Already have an account? 
-      <a href="login.html" class="text-blue-700 font-bold hover:text-blue-900 transition">Log in</a>
+      <a href="login1.html" class="text-blue-700 font-bold hover:text-blue-900 transition">Log in</a>
     </div>
   </div>
 </body>
